minor spacing fix on computer frames

--- a/components/SVGComponents/ComputerFrame/styles.module.scss
+++ b/components/SVGComponents/ComputerFrame/styles.module.scss
@@ -16,7 +16,7 @@
 		width: 1100px;
 		height: 100%;
 		//aspect-ratio: 5/3;
-		top: calc(50% + 100px);
+		top: calc(50% + 75px);
 		left: 50%;
 		transform: translate(-50%, -50%);
 		z-index: 1;
